...
                            .foregroundStyle(.secondary)
                    },
                )
                .frame(height: 150)
        }
        .buttonStyle(PlainButtonStyle())
        .accessibilityIdentifier("addWalletButton")
    }
    
    @ViewBuilder
    private func walletDetailView(for wallet: Wallet) -> some View {
        switch wallet.chainType {
        case .evm:
...
